load textures works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
-	"files.associations": {
-		"cub3d.h": "c"
-	}
+    "files.associations": {
+        "unistd.h": "c",
+        "stdarg.h": "c",
+        "fdf.h": "c",
+        "type_traits": "c",
+        "utility": "c",
+        "minishell.h": "c",
+        "readline.h": "c"
+    }
 }
